Fixed bugs in header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="header">
       <h1>CONVERTER</h1>
-      <div class="btn-contener">
+      <div class="btn-container">
         <button class="btn-temp" type="button">Temperature</button>
         <button class="btn-length" type="button">Length</button>
         <button class="btn-weight" type="button">Weight</button>
