Changed the style of the page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
         <button class="btn-weight" type="button">Weight</button>
       </div>
     </div>
-    <div class="content"></div>
+    <div class="content">
+      <h2 class=""></h2>
+    </div>
   </body>
 </html>
