--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       </div>
     </div>
     <div class="content">
-      <h2 class=""></h2>
+      <h2 class="content-header">TEMPERATURE</h2>
+      <div class="content-container"></div>
     </div>
   </body>
 </html>
