--- a/index.html
+++ b/index.html
@@ -13,23 +13,23 @@
       <div class="header">
         <h1>CONVERTER</h1>
         <div class="btn-container">
-          <button class="btn-temp" type="button">Temperature</button>
-          <button class="btn-length" type="button">Length</button>
-          <button class="btn-weight" type="button">Weight</button>
+          <button class="btn-header btn-temp" type="button">Temperature</button>
+          <button class="btn-header btn-length" type="button">Length</button>
+          <button class="btn-header btn-weight" type="button">Weight</button>
         </div>
       </div>
       <div class="content">
         <h2 class="content-header">TEMPERATURE</h2>
         <div class="content-container">
-          <form class="conv_units">
-            <select id="conv_from">
+          <form class="conv-units">
+            <select id="conv-from">
               <option value="celsius">Celsius (°C)</option>
               <option value="fahrenheit">Fahrenheit (°F)</option>
               <option value="kelvin">Kelvin (K)</option>
               <option value="rankine">Rankine (°R)</option>
             </select>
             to
-            <select id="conv_to">
+            <select id="conv-to">
               <option value="celsius">Celsius (°C)</option>
               <option value="fahrenheit">Fahrenheit (°F)</option>
               <option value="kelvin">Kelvin (K)</option>
@@ -44,9 +44,12 @@
           <div>
             <button class="submit-input">Convert</button>
           </div>
-          <div class="conv-value">Result: 100°C</div>
+          <div class="conv-value">
+            Result: <span id="result-value">100°C</span>
+          </div>
         </div>
       </div>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
